# ember

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  rust-toolchain.toml
.github/workflows/: ci.yml
apps/com.bd452.ember/: README.md  build.sh
apps/com.bd452.ember/package/: install.sh  manifest.json
apps/com.bd452.emberdemo/: README.md  build.sh
apps/com.bd452.emberdemo/package/: app.sh  install.sh  manifest.json  uninstall.sh
apps/com.bd452.emberdemo/scripts/: make-icon.py
docs/: extraction-history.md
ember/: Cargo.toml  README.md  cbindgen.toml
ember-demo/: Cargo.toml  README.md
ember-demo/src/: main.rs
ember/docs/: README.md  building.md  c-abi.md  concepts.md  device.md  usage.md
ember/include/: ember.h
ember/src/: app.rs  component.rs  ffi.rs  layout.rs  lib.rs  node.rs  signal.rs
ember/src/input/: evdev.rs  mod.rs
ember/src/render/: fbink.rs  mock.rs  mod.rs
ember/src/structural/: slot.rs
ember/src/widget/: book_card.rs  button.rs  mod.rs  tab_bar.rs
fbink-sys/: build.rs
fbink-sys/src/: lib.rs
scripts/: build-in-container.sh  generate-release-metadata.sh  pack-app.sh  run-ember-demo-on-kindle.sh  verify-package-reproducibility.sh
